Bug 277468 - kwrite crashed on start
Summary: kwrite crashed on start
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: kwrite (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
: 269206 278156 282175 292038 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-07-10 14:11 UTC by chlorophyll273
Modified: 2012-12-18 09:22 UTC (History)
9 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (1.02 KB, text/plain)
2011-08-21 12:52 UTC, Anton Aylward
Details
New crash information added by DrKonqi (985 bytes, text/plain)
2011-09-14 05:08 UTC, Patrice Blairon
Details

Note You need to log in before you can comment on or make changes to this bug.
Description chlorophyll273 2011-07-10 14:11:23 UTC
Application: kwrite (4.6.3 (4.6.3))
KDE Platform Version: 4.6.90 (4.7 RC1)
Qt Version: 4.7.3
Operating System: Linux 3.0-3-generic x86_64
Distribution: Ubuntu oneiric (development branch)

-- Information about the crash:
kwrite crashed on start

The crash can be reproduced every time.

-- Backtrace:
Application: KWrite (kwrite), signal: Segmentation fault
[KCrash Handler]
#6  KTextEditor::Editor::setSimpleMode (this=0x0, on=true) at ../../../interfaces/ktexteditor/ktexteditor.cpp:98
#7  0x00007f1bec61eda9 in KWriteApp::KWriteApp (this=0x7ffff0617b10, m_args=<value optimized out>) at ../../kwrite/kwriteapp.cpp:43
#8  0x00007f1bec61b9dc in kdemain (argc=1, argv=<value optimized out>) at ../../kwrite/kwritemain.cpp:678
#9  0x00007f1bec285e1f in __libc_start_main (main=0x400630 <main(int, char**)>, argc=1, ubp_av=0x7ffff06185f8, init=<value optimized out>, fini=<value optimized out>, rtld_fini=<value optimized out>, stack_end=0x7ffff06185e8) at libc-start.c:226
#10 0x0000000000400661 in _start ()

Possible duplicates by query: bug 269206, bug 244966.

Reported using DrKonqi
Comment 1 Christoph Cullmann 2011-07-10 14:18:41 UTC
Installation problem, part not found, current master & KDE/4.7 have proper error dialog.
Comment 2 Dominik Haumann 2011-08-01 10:26:22 UTC
*** Bug 269206 has been marked as a duplicate of this bug. ***
Comment 3 Dominik Haumann 2011-08-01 10:26:30 UTC
*** Bug 278156 has been marked as a duplicate of this bug. ***
Comment 4 Anton Aylward 2011-08-21 12:52:18 UTC
Created attachment 63023 [details]
New crash information added by DrKonqi

kwrite (4.7.00 (4.7.0) "release 10") on KDE Platform 4.7.00 (4.7.0) "release 10" using Qt 4.7.3

- What I was doing when the application crashed:

This occurs in openSuse KDE4.7 from Factory repository

kwrite-4.7.0-7.2

The problem persists even after re-installation.
The error message:
    A KDE text editor component could not be found
   Please check your KDE installation
is unhelpful.
*WHAT* component?

-- Backtrace (Reduced):
#7  0xb752dd48 in KTextEditor::Editor::setSimpleMode(bool) () from /usr/lib/libktexteditor.so.4
#8  0xb76cc89c in KWriteApp::KWriteApp(KCmdLineArgs*) () from /usr/lib/libkdeinit4_kwrite.so
#9  0xb76c893b in kdemain () from /usr/lib/libkdeinit4_kwrite.so
#10 0x0804860b in main ()
Comment 5 Christoph Cullmann 2011-08-21 19:12:34 UTC
The SuSE factory is broken.
The part is not there and more than show that can't be done. Normally it should be a hard dependency for kwrite/kate..
Sorry.
No idea how to fix that for SuSE, perhaps report it there, and tell the libkatepart.so is missing for you.
Comment 6 Ismail Donmez 2011-08-21 19:17:50 UTC
Hum, I just checked openSUSE Factory KDE 4.7 packages and kwrite package has a dependency on libktexteditor package which provides;

/usr/lib64/kde4/katepart.so
/usr/lib64/libkatepartinterfaces.so.4

among other things. Also kwrite works for me on Factory.
Comment 7 Anton Aylward 2011-08-21 20:18:55 UTC
That may be so, Ismail.
I don't know, I'm running 32-bit not 64 bit, but I do have 
'libktexteditor-4.7.0-10.2.i586' installed.

Never the less, when I try running kate I get a pop-up telling me an editor component cannot be found.

Perhaps it is another one :-)

Since the backtrace has

#7  0xb752dd48 in KTextEditor::Editor::setSimpleMode(bool) () from
/usr/lib/libktexteditor.so.4

I think that libktexeditor is present and loaded.
So what _is_ the failing module?
Comment 8 Patrice Blairon 2011-09-14 05:08:38 UTC
Created attachment 63637 [details]
New crash information added by DrKonqi

kwrite (4.7.1 (4.7.1)) on KDE Platform 4.7.1 (4.7.1) using Qt 4.7.4

- What I was doing when the application crashed:
try to launch Kwrite! after each attempt to launch kwrite crash!

-- Backtrace (Reduced):
#6  KTextEditor::Editor::setSimpleMode (this=0x0, on=true) at /usr/src/debug/kdelibs-4.7.1/interfaces/ktexteditor/ktexteditor.cpp:98
#7  0x00007f19e1b4b9e0 in KWriteApp::KWriteApp (this=0x7fff49d16e70, m_args=<value optimized out>) at /usr/src/debug/kate-4.7.1/kwrite/kwriteapp.cpp:43
#8  0x00007f19e1b483c9 in kdemain (argc=2, argv=0x615280) at /usr/src/debug/kate-4.7.1/kwrite/kwritemain.cpp:678
#9  0x00000000004072a9 in _start ()
Comment 9 Dominik Haumann 2011-09-17 19:33:41 UTC
*** Bug 282175 has been marked as a duplicate of this bug. ***
Comment 10 Dominik Haumann 2012-01-21 11:24:23 UTC
*** Bug 292038 has been marked as a duplicate of this bug. ***
Comment 11 Christopher Yeleighton 2012-12-15 11:53:31 UTC
This bug is NOT fixed.  You call QCoreApplication::exit in the constructor for KApplication, which does not exit at that point, and then you proceed with dereferencing a NULL pointer.  Please REOPEN.
Comment 12 Christoph Feck 2012-12-15 18:48:51 UTC
Reopening based on comment #11.
Comment 13 Dominik Haumann 2012-12-18 09:19:00 UTC
Git commit 10fee5409984e7cbab17719d2fd18465a8dcad57 by Dominik Haumann.
Committed on 18/12/2012 at 10:18.
Pushed by dhaumann into branch 'master'.

use ::exit() istead of QCoreApplication::exit()

M  +1    -1    kwrite/kwriteapp.cpp

http://commits.kde.org/kate/10fee5409984e7cbab17719d2fd18465a8dcad57
Comment 14 Dominik Haumann 2012-12-18 09:22:00 UTC
Git commit 6bd42579908cf62f094ebca0e100832208967428 by Dominik Haumann.
Committed on 18/12/2012 at 10:18.
Pushed by dhaumann into branch 'KDE/4.10'.

use ::exit() istead of QCoreApplication::exit()

M  +1    -1    kwrite/kwriteapp.cpp

http://commits.kde.org/kate/6bd42579908cf62f094ebca0e100832208967428