use ::exit() istead of QCoreApplication::exit()

BUG: 277468